== Version ?: Not Released ==

* Added running count to Hamcrest_MatcherAssert with methods to get and reset it.

* Added Hamcrest_Type_IsScalar to assert is_scalar() (bool, int, float, double, string).

    assertThat($count, scalarValue());

== Version 0.2.0: Released Jul 14 2010 ==

Issues Fixed: 109, 111, 114, 115

* Description::appendValues() and appendValueList() accept Iterator and IteratorAggregate. [111]
  BaseDescription::appendValue() handles IteratorAggregate.

* assertThat() accepts a single boolean parameter and
  wraps any non-Matcher third parameter with equalTo().

* Removed null return value from assertThat(). [114]

* Fixed wrong variable name in contains(). [109]

* Added Hamcrest_Core_IsSet to assert isset().

    assertThat(array('foo' => 'bar'), set('foo'));
    assertThat(array('foo' => 'bar'), notSet('bar'));

* Added Hamcrest_Core_IsTypeOf to assert built-in types with gettype(). [115]
  Types: array, boolean, double, integer, null, resource, and string.
  Note that gettype() returns "double" for float values.

    assertThat($count, typeOf('integer'));
    assertThat(3.14159, typeOf('double'));
    assertThat(array('foo', 'bar'), typeOf('array'));

* Added Hamcrest_Type_IsInteger, IsBoolean, etc.

    assertThat($count, integerValue());
    assertThat('5', numericValue());
    assertThat('foo', stringValue());

* Added Hamcrest_Type_IsCallable to assert is_callable().

    assertThat('preg_match', callable());
    assertThat(array('SomeClass', 'SomeMethod'), callable());
    assertThat(array($object, 'SomeMethod'), callable());
    assertThat($object, callable());

* Added Hamcrest_Text_MatchesPattern for regex matching with preg_match().

    assertThat('foobar', matchesPattern('/o+b/'));

* Added aliases:
  - atLeast() for greaterThanOrEqualTo()
  - atMost() for lessThanOrEqualTo()


== Version 0.1.0: Released Jul 7 2010 ==

* Created PEAR package

* Core matchers
